Front-End Minor Updates

--- a/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
@@ -346,6 +346,7 @@
   <br/>
   <div>
       <label style="color:red;">* Click on the Protein ID to access its information. </label>
+      <label style="color:blue;">Note that proteins have canonical sequences (<a href="https://www.uniprot.org/help/canonical_and_isoforms">link</a>). </label>
     </div>
     <br>
   <mat-card>
