--- a/Code/PerceptronFrontEnd/src/app/adminPanel/adminPanel.component.html
+++ b/Code/PerceptronFrontEnd/src/app/adminPanel/adminPanel.component.html
@@ -7,7 +7,7 @@
                             <div class="col-md-12">
                                 <div class="col-md-4 pull-right">
                                     <div class="float_text_right">
-                                    <img class="img-responsive shadow float_text_left" src="assets/images/home.png" width="60%"/>
+                                    <img class="img-responsive shadow float_text_left" src="assets/images/StrikingImage.jpg" width="60%"/>
                                 
                                 <span>
                                     <p class=".float_text_right">
