--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -165,8 +165,11 @@
     <router-outlet></router-outlet>
     <hr>
     <footer>
-        <div class="container-fluid text-center text-md-left">
+        <label style="font-size: small; text-align: center; font-family: roboto, sans-serif, arial;"><a routerLink="/contact"> Contact Us</a> &nbsp;&nbsp; <a href="http://biolabs.lums.edu.pk/birl">(c) 2020 Biomedical Informatics Research Laboratory (BIRL)</a></label>
 
+        <!-- <label style="font-size: small;  font-family: roboto, sans-serif, arial;"><a href="http://biolabs.lums.edu.pk/birl"> (c) 2020 Biomedical Informatics Research Laboratory (BIRL)</a></label> -->
+
+        <!-- <div class="container-fluid text-center text-md-left">
             <div class="row">
               <hr class="clearfix w-100 d-md-none pb-3">
               <div class="col-md-3 mb-md-0 mb-3" style="padding-right:15px;">
@@ -174,10 +177,10 @@
               </div>
       
                 <div class="col-md-3 mb-md-0 mb-3" style="padding-right:10px;">
-                    <label style="font-size: small; font-family: roboto, sans-serif, arial;"><a href="http://biolabs.lums.edu.pk/birl"> (c) 2020 Biomedical Informatics Research Laboratory (BIRL)</a></label>
+                    <label style="font-size: small;  font-family: roboto, sans-serif, arial;"><a href="http://biolabs.lums.edu.pk/birl"> (c) 2020 Biomedical Informatics Research Laboratory (BIRL)</a></label>
                 </div>
             </div>
-          </div>
+          </div> -->
          
     </footer>
   </mat-sidenav-content>
