--- a/Code/PerceptronFrontEnd/src/app/about/about.component.html
+++ b/Code/PerceptronFrontEnd/src/app/about/about.component.html
@@ -8,20 +8,29 @@
                             
                     <img src ="assets/images/home.png" width ="60%">
                     </div> -->
+                    
                     <div class="row"> 
                         <div class="col-md-12">
                             <div class="col-md-4 pull-right">
                                 <div class="float_text_right">
-                                <img class="img-responsive shadow float_text_left" src="assets/images/StrikingImage.jpg" width="60%"/>
-                            
+                                    <br>
+                                <img class="img-responsive shadow float_text_left" src="assets/images/WebStrikingImage.jpg" width="75%"/>
+
+                            <!--StrikingImage.png is for "About PERCEPTRON"-->
+                            <br>
+                            <!-- <label style="text-align:left; font-size: 20px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Welcome to PERCEPTRON!</label> -->
+
                             <span>
-                                <label style="text-align:left; font-size: 20px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Welcome to PERCEPTRON!</label>
-                                    <p align=”justify” class="float_text_right; font-size:15px; letter-spacing:0px; font-weight:500; font-family: Roboto, Arial, sans-serif;">
-                                    <br> Top-down proteomics (TDP) is an emerging experimental protocol for analysis of intact proteoforms using high resolution tandem mass spectrometry. PERCEPTRON searches spectral data from TDP and is available, freely, online.<br><br>PERCEPTRON's search pipeline brings together algorithms for:<br><b>(i)</b> intact mass tuning <br><b>(ii)</b> <i>de novo</i> peptide sequence tag extraction <br><b>(iii)</b> <i>in silico</i> spectral comparison <br><b>(iv)</b> characterization of post-translational modifications  <br><b>(v)</b> identification of truncated proteins<br><b>(vi)</b> composite scoring of candidate protein scoring <br><br>
+                                <label style="text-align:left; font-size: 22px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Welcome to PERCEPTRON!</label>
+                                        <p style= "font-size: 18px; text-align:justify" class="float_text_right; font-size:18px; letter-spacing:0px; font-weight:500; font-family: Roboto, Arial, sans-serif;">
+                                        PERCEPTRON is a freely available web-based proteoform identification pipeline for Top-Down Proteomics (TDP). Top-down proteomics is an emerging experimental protocol for analysis of intact proteoforms. PERCEPTRON search pipeline brings together algorithms for: <br><b>(i)</b> intact mass tuning <br><b>(ii)</b> <i>de novo</i> peptide sequence tag extraction <br><b>(iii)</b> <i>in silico</i> spectral comparison <br><b>(iv)</b> characterization of post-translational modifications  <br><b>(v)</b> identification of truncated proteins<br><b>(vi)</b> a novel composite scoring scheme for candidate protein scoring <br><br>PERCEPTRON achieves high performance by leveraging <b>NVIDIA GPU technology</b> coupled with <b>Microsoft ASP.NET</b> and <b>ANGULAR frameworks.</b>The search results obtained include a list of proteins, their scores and details on the matching information. This information can be visualized as well as downloaded. All in all, PERCEPTRON is aimed at filling the crucial void of open-source and open-architecture protein identification software for TDP data, employing state-of-the-art algorithms.
+                                    </p>
+                                </span>
+
+                            
+                                    <!-- <label style="text-align:left; font-size: 20px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Welcome to PERCEPTRON!</label> -->
                                     
-                                    To support high-throughput data analysis, PERCEPTRON brings together these algorithms in a high-performance modality. This is achieved by leveraging NVIDIA's graphical processing units (GPU) technology coupled with Microsoft <a href="https://dotnet.microsoft.com/apps/aspnet">ASP.NET </a> and ANGULAR frameworks.The search results obtained include a ranked list of proteins, their scores and details on the matching information. This information can be visualized as well as downloaded.<br><br>With these features, PERCEPTRON aims to address the void due to lack of open-source and open-architecture protein identification software for TDP data.
-                                </p>
-                            </span>
+                                <!-- </span> -->
                             
 
 <!--<a href="https://www.youtube.com/playlist?list=PLaNVq-kFOn0Z_7b-iL59M_CeV06JxEXmA">here</a> -->
