Minor Updates in Front-End

--- a/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
@@ -323,7 +323,7 @@
       </mat-grid-tile>
       <mat-grid-tile colspan="1" rowspan="1">
         <div style="padding-left:5px; width:100%">
-          <label style="font-size:15px;" id="Trunc"></label>
+          <label style="font-size:15px;" id="Truncation"></label>
         </div>
       </mat-grid-tile>
 
