--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -32,7 +32,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="example-sidenav-container" style="height:100vh;  padding-top:60px;">
-  <mat-sidenav #sidenav mode="side" opened="true" style=" background-color:#FAFAFA; padding-top:60px;">
+  <mat-sidenav #sidenav mode="side" opened="false" style=" background-color:#FAFAFA; padding-top:60px;">
     <nav>
     
       <button matTooltip="A next-generation top-down proteoform search and identification platform" matTooltipPosition="after" mat-button style="color:grey; height: 45px; width:100%; text-align:left;   font-size:large;"  (click)="about()">
