--- a/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
+++ b/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
@@ -11,7 +11,9 @@ class="ui form">
       </mat-card-header>
       <mat-card-content>
       <h4 style="text-align:center; font-weight:bold; margin:0 auto;">Suggestions & Report Bugs</h4></mat-card-content>
-      <br>
+  
+  </mat-card>
+  <br>
       <mat-card>
           <div style="height:10px;font-size:1px;">&nbsp;</div>
           <p style="font-size:18px;">For suggestions and bug reports please visit at <a href="https://github.com/BIRL/PERCEPTRON/issues">here</a></p>
