--- a/Code/PerceptronFrontEnd/src/app/help/help.component.html
+++ b/Code/PerceptronFrontEnd/src/app/help/help.component.html
@@ -5,7 +5,7 @@
                 <div style="height:10px;font-size:1px;">&nbsp;</div>
                 
                 <mat-card>
-                    <div style="height:10px;font-size:1px;">&nbsp;</div>
+                    <!-- <div style="height:10px;font-size:1px;">&nbsp;</div> -->
 
                     <p style="font-size:18px;">For help & manual please visit at <a href="https://github.com/BIRL/PERCEPTRON/tree/master/Documentation">here</a></p>
                     <!-- <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Implementation Steps</h5> -->
