--- a/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
+++ b/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
@@ -4,12 +4,12 @@
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
     <mat-card>
-        <mat-card-header>
+        <!-- <mat-card-header> -->
             <p style="font-size:18px;">For video tutorials please visit at <a href="https://www.youtube.com/playlist?list=PLaNVq-kFOn0Z_7b-iL59M_CeV06JxEXmA">here</a></p>
             
             <!-- <h5 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">GPS Cancer - Proteomics Introduction</h5> -->
 
-        </mat-card-header>
+        <!-- </mat-card-header> -->
         <!-- <iframe style=" margin-left: auto; margin-right: auto; display: block;padding-top: 10px;" width="560" height="315" src="https://www.youtube.com/embed/OkUqfADzBPc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
