--- a/Code/PerceptronFrontEnd/src/app/team/team.component.html
+++ b/Code/PerceptronFrontEnd/src/app/team/team.component.html
@@ -39,20 +39,19 @@
     <mat-card>
         <mat-card-content>
 
+            
             <mat-grid-list cols="17" rowHeight="300px">
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/Safee Ullah Chaudhary.png" width="200" height="230">
+                        <img src="assets/images/Safee Ullah Chaudhary.png" width="190" height="190">
 
-                        <p style="text-align:center;"><b>Safee Ullah Chaudhary</b> Group Leader<br>Assistant Professor, Lahore
+                        <p style="text-align:center;"><b>Safee Ullah Chaudhary</b> Group Leader<br>Assistant Professor,
+                            Lahore
                             University of Management Sciences</p>
 
                     </div>
                 </mat-grid-tile>
-
-
-
 
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
@@ -77,7 +76,7 @@
                 <mat-grid-tile colspan="3">
 
                     <div>
-                        <img src="assets/images/WIM_VANDERBAUWHEDE.png" width="185" height="200">
+                        <img src="assets/images/WIM_VANDERBAUWHEDE.png" width="185" height="175">
 
                         <p style="text-align:center;"><b>Wim Vanderbauwhede</b><br>Professor, University of Glasgow</p>
                     </div>
@@ -101,8 +100,6 @@
 
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
-
-
 
     <mat-card>
         <label
@@ -238,6 +235,7 @@
 
 
             <mat-grid-list cols="17" rowHeight="300px">
+                   
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
@@ -250,7 +248,7 @@
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/AbdulRehman.png" width="200" height="200">
+                        <img src="assets/images/AbdulRehman.png" width="190" height="190">
 
                         <p style="text-align:center;"><b>Abdul Rehman</b><br>Research Associate, Lahore
                             University of Management Sciences</p>
