--- a/Code/PerceptronFrontEnd/src/app/about/about.component.html
+++ b/Code/PerceptronFrontEnd/src/app/about/about.component.html
@@ -61,7 +61,7 @@
 
     <br>
 
-    <!-- <mat-card style = "height: 100%">
+    <mat-card style = "height: 100%">
     <label style="text-align:center; font-size: 25px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">PERCEPTRON - Browser Compatibility</label>
             <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                     
@@ -88,6 +88,6 @@
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
                   </mat-table>
-                </mat-card> -->
+                </mat-card>
     </div>
     
