--- a/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/detailed-results/detailed-results.component.html
@@ -440,6 +440,7 @@
   </mat-card>
   <br/>
 
- 
-  
+  <div class="example-button-row">
+      <a  routerLink = "/results-visualization"> Results Visualization </a>
+  </div>
 </div>
