--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -26,62 +26,59 @@
 
   <div style="height:10px;font-size:1px;">&nbsp;</div>
 
-  <mat-card style="height: 100%">
+  <mat-card>
     <h6 style="text-align:center; font-weight:bold">Matched Fragments</h6>
-    <!-- <label style="text-align:center; font-size: 25px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">PERCEPTRON - Browser Compatibility</label> -->
+    <div class="example-container mat-elevation-z8"></div>
+
     <mat-table [dataSource]="dataSource" matSort>
 
       <!-- Serial Column -->
       <ng-container matColumnDef="rank">
-        <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Serial No.
+        <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Protein Rank
         </mat-header-cell>
-        <mat-cell matTooltip="{{row.rank
-        }}" style=" font-size:15px;" *matCellDef="let row"> {{row.rank}} </mat-cell>
+        <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.rank}} </mat-cell>
       </ng-container>
 
       <!-- FragmentID Column -->
       <ng-container matColumnDef="FragmentID">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Fragment ID
         </mat-header-cell>
-        <mat-cell matTooltip="{{row.FragmentID
-        }}" style=" font-size:15px;" *matCellDef="let row"> {{row.FragmentID}} </mat-cell>
+        <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.FragmentID}} </mat-cell>
       </ng-container>
 
       <!-- FragmentIon Column -->
       <ng-container matColumnDef="FragmentIon">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Fragment Ion
         </mat-header-cell>
-        <mat-cell matTooltip="{{row.FragmentIon
-        }}" style=" font-size:15px;" *matCellDef="let row"> {{row.FragmentIon}} </mat-cell>
+        <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.FragmentIon}} </mat-cell>
       </ng-container>
 
       <!-- ExperimentalMZ Column -->
       <ng-container matColumnDef="ExperimentalMZ">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Experimental MZ
         </mat-header-cell>
-        <mat-cell matTooltip="{{row.ExperimentalMZ
-                      }}" style=" font-size:15px;" *matCellDef="let row"> {{row.ExperimentalMZ}} </mat-cell>
+        <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.ExperimentalMZ}} </mat-cell>
       </ng-container>
 
       <!-- TheoreticalMZ Column -->
       <ng-container matColumnDef="TheoreticalMZ">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Theoretical MZ
         </mat-header-cell>
-        <mat-cell matTooltip="{{row.TheoreticalMZ
-        }}" style=" font-size:15px;" *matCellDef="let row"> {{row.TheoreticalMZ}} </mat-cell>
+        <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.TheoreticalMZ}} </mat-cell>
       </ng-container>
+
 
       <!-- MassDifference Column -->
       <ng-container matColumnDef="MassDifference">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Mass Difference
         </mat-header-cell>
-        <mat-cell matTooltip="{{row.MassDifference
-        }}" style=" font-size:15px;" *matCellDef="let row"> {{row.MassDifference}} </mat-cell>
+        <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.MassDifference}} </mat-cell>
       </ng-container>
+
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </mat-card>
-
 </div>
 
 <router-outlet></router-outlet>
