--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -9,8 +9,7 @@
   <mat-card>
     <h6 style="text-align:center; font-weight:bold">Detailed Protein View Hit</h6>
     <div>
-      <!-- <img src="assets/Results File Images/DetailedProteinView_Qid_2d1cf88f-48ce-46ce-b850-47ce88fd5712_Rid_b8e852b3-5984-4621-9529-0b83397e1183.jpg"
-                width="800" height="500"> -->
+        <img [src]="ImageFilePath">
     </div>
   </mat-card>
 
@@ -19,8 +18,7 @@
   <mat-card>
     <h6 style="text-align:center; font-weight:bold">Mass Spectrum Visualization</h6>
     <div>
-      <!-- <img src="C:\inetpub\wwwroot\PerceptronAPI\App_Data\ResultsDownload\Results File Images\DetailedProteinView_Qid_2d1cf88f-48ce-46ce-b850-47ce88fd5712_Rid_2d2bf41d-c11b-4a67-bd16-5fc66c8decb3.jpg"
-                width="1000" height="500"> -->
+
     </div>
   </mat-card>
 
