--- a/Code/PerceptronFrontEnd/src/app/scan-view/scan-view.component.html
+++ b/Code/PerceptronFrontEnd/src/app/scan-view/scan-view.component.html
@@ -11,9 +11,9 @@
   
   <div style="height:10px;font-size:1px;">&nbsp;</div>
       
-      <label style="padding-right:15px;"></label>
+      <!-- <label style="padding-right:15px;"></label>
       <button mat-raised-button matTooltip="Click to Download Results"  type="submit" style="background-color: #201a93; color:aliceblue"
-      class="ui button" (click)=download()>Results Download</button>
+      class="ui button" (click)=download()>Results Download</button> -->
       
       <div style="height:50px;font-size:1px;">&nbsp;&nbsp;&nbsp;&nbsp;</div>
 
